Compilateur/parser.output
Grammaire

    0 $accept: Program $end

    1 $@1: /* vide */

    2 Program: tINT tMAIN $@1 tOP tCP Body
    3        | tVOID tMAIN tOP tCP Body

    4 Type: tINT
    5     | tFLOAT
    6     | tVOID
    7     | tCHAR

    8 Body: tOB Instruction tCB

    9 Expression: tINT_VAL
   10           | tFLOAT_VAL
   11           | tCHAR_VAL
   12           | Expression tPLUS Expression
   13           | Expression tMOINS Expression
   14           | Expression tFOIS Expression
   15           | Expression tDIVISE Expression
   16           | Expression tCOMPARAISON Expression
   17           | Expression tINFSTRICT Expression
   18           | Expression tSUPSTRICT Expression
   19           | Expression tSUPEGAL Expression
   20           | Expression tINFEGAL Expression
   21           | Expression tDIFF Expression
   22           | tNOT Expression
   23           | tMOINS Expression
   24           | tOP Expression tCP
   25           | tVAR

   26 $@2: /* vide */

   27 Liste: tVAR tCOMMA $@2 Liste

   28 $@3: /* vide */

   29 Liste: tVAR tVIRG $@3 Instruction

   30 $@4: /* vide */

   31 $@5: /* vide */

   32 If: tIF tOP $@4 Expression tCP $@5 Body

   33 $@6: /* vide */

   34 Else: tELSE $@6 Body

   35 $@7: /* vide */

   36 $@8: /* vide */

   37 Instruction: tVAR tPLUS tPLUS tVIRG $@7 $@8 Instruction

   38 $@9: /* vide */

   39 $@10: /* vide */

   40 Instruction: tVAR tMOINS tMOINS tVIRG $@9 $@10 Instruction

   41 $@11: /* vide */

   42 $@12: /* vide */

   43 Instruction: Type tVAR tEGAL $@11 Expression tVIRG $@12 Instruction

   44 $@13: /* vide */

   45 $@14: /* vide */

   46 Instruction: Type tCONST tVAR tEGAL $@13 Expression tVIRG $@14 Instruction

   47 $@15: /* vide */

   48 $@16: /* vide */

   49 Instruction: tCONST Type tVAR tEGAL $@15 Expression tVIRG $@16 Instruction

   50 $@17: /* vide */

   51 Instruction: Type tVAR tVIRG $@17 Instruction

   52 $@18: /* vide */

   53 Instruction: Type tVAR tCOMMA $@18 Liste

   54 $@19: /* vide */

   55 $@20: /* vide */

   56 Instruction: tVAR tEGAL $@19 Expression tVIRG $@20 Instruction
   57            | If Else Instruction
   58            | If Instruction

   59 $@21: /* vide */

   60 $@22: /* vide */

   61 Instruction: tDO $@21 Body tWHILE tOP Expression tCP $@22 tVIRG Instruction

   62 $@23: /* vide */

   63 Instruction: tPRINTF tOP tVAR $@23 tCP tVIRG Instruction

   64 @24: /* vide */

   65 Instruction: tRETURN tVAR tVIRG @24 Instruction

   66 @25: /* vide */

   67 Instruction: tRETURN tINT_VAL tVIRG @25 Instruction
   68            | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tCOMMA (258) 27 53
tIF (259) 32
tELSE (260) 34
tDO (261) 61
tWHILE (262) 61
tOP (263) 2 3 24 32 61 63
tCP (264) 2 3 24 32 61 63
tOB (265) 8
tCB (266) 8
tVAR (267) 25 27 29 37 40 43 46 49 51 53 56 63 65
tINT (268) 2 4
tVOID (269) 3 6
tCHAR (270) 7
tFLOAT (271) 5
tVIRG (272) 29 37 40 43 46 49 51 56 61 63 65 67
tMAIN (273) 2 3
tCONST (274) 46 49
tINT_VAL (275) 9 67
tFLOAT_VAL (276) 10
tCHAR_VAL (277) 11
tRETURN (278) 65 67
tPRINTF (279) 63
tMOINS (280) 13 23 40
tPLUS (281) 12 37
tDIVISE (282) 15
tFOIS (283) 14
tNEG (284)
tSUPSTRICT (285) 18
tINFSTRICT (286) 17
tCOMPARAISON (287) 16
tDIFF (288) 21
tINFEGAL (289) 20
tSUPEGAL (290) 19
tEGAL (291) 43 46 49 56
tNOT (292) 22


Non-terminaux, suivis des règles où ils apparaissent

$accept (38)
    à gauche: 0
Program (39)
    à gauche: 2 3, à droite: 0
$@1 (40)
    à gauche: 1, à droite: 2
Type (41)
    à gauche: 4 5 6 7, à droite: 43 46 49 51 53
Body (42)
    à gauche: 8, à droite: 2 3 32 34 61
Expression (43)
    à gauche: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25, à droite:
    12 13 14 15 16 17 18 19 20 21 22 23 24 32 43 46 49 56 61
Liste (44)
    à gauche: 27 29, à droite: 27 53
$@2 (45)
    à gauche: 26, à droite: 27
$@3 (46)
    à gauche: 28, à droite: 29
If (47)
    à gauche: 32, à droite: 57 58
$@4 (48)
    à gauche: 30, à droite: 32
$@5 (49)
    à gauche: 31, à droite: 32
Else (50)
    à gauche: 34, à droite: 57
$@6 (51)
    à gauche: 33, à droite: 34
Instruction (52)
    à gauche: 37 40 43 46 49 51 53 56 57 58 61 63 65 67 68, à droite:
    8 29 37 40 43 46 49 51 56 57 58 61 63 65 67
$@7 (53)
    à gauche: 35, à droite: 37
$@8 (54)
    à gauche: 36, à droite: 37
$@9 (55)
    à gauche: 38, à droite: 40
$@10 (56)
    à gauche: 39, à droite: 40
$@11 (57)
    à gauche: 41, à droite: 43
$@12 (58)
    à gauche: 42, à droite: 43
$@13 (59)
    à gauche: 44, à droite: 46
$@14 (60)
    à gauche: 45, à droite: 46
$@15 (61)
    à gauche: 47, à droite: 49
$@16 (62)
    à gauche: 48, à droite: 49
$@17 (63)
    à gauche: 50, à droite: 51
$@18 (64)
    à gauche: 52, à droite: 53
$@19 (65)
    à gauche: 54, à droite: 56
$@20 (66)
    à gauche: 55, à droite: 56
$@21 (67)
    à gauche: 59, à droite: 61
$@22 (68)
    à gauche: 60, à droite: 61
$@23 (69)
    à gauche: 62, à droite: 63
@24 (70)
    à gauche: 64, à droite: 65
@25 (71)
    à gauche: 66, à droite: 67


état 0

    0 $accept: . Program $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    Program  aller à l'état 3


état 1

    2 Program: tINT . tMAIN $@1 tOP tCP Body

    tMAIN  décalage et aller à l'état 4


état 2

    3 Program: tVOID . tMAIN tOP tCP Body

    tMAIN  décalage et aller à l'état 5


état 3

    0 $accept: Program . $end

    $end  décalage et aller à l'état 6


état 4

    2 Program: tINT tMAIN . $@1 tOP tCP Body

    $défaut  réduction par utilisation de la règle 1 ($@1)

    $@1  aller à l'état 7


état 5

    3 Program: tVOID tMAIN . tOP tCP Body

    tOP  décalage et aller à l'état 8


état 6

    0 $accept: Program $end .

    $défaut  accepter


état 7

    2 Program: tINT tMAIN $@1 . tOP tCP Body

    tOP  décalage et aller à l'état 9


état 8

    3 Program: tVOID tMAIN tOP . tCP Body

    tCP  décalage et aller à l'état 10


état 9

    2 Program: tINT tMAIN $@1 tOP . tCP Body

    tCP  décalage et aller à l'état 11


état 10

    3 Program: tVOID tMAIN tOP tCP . Body

    tOB  décalage et aller à l'état 12

    Body  aller à l'état 13


état 11

    2 Program: tINT tMAIN $@1 tOP tCP . Body

    tOB  décalage et aller à l'état 12

    Body  aller à l'état 14


état 12

    8 Body: tOB . Instruction tCB

    tIF      décalage et aller à l'état 15
    tDO      décalage et aller à l'état 16
    tVAR     décalage et aller à l'état 17
    tINT     décalage et aller à l'état 18
    tVOID    décalage et aller à l'état 19
    tCHAR    décalage et aller à l'état 20
    tFLOAT   décalage et aller à l'état 21
    tCONST   décalage et aller à l'état 22
    tRETURN  décalage et aller à l'état 23
    tPRINTF  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 68 (Instruction)

    Type         aller à l'état 25
    If           aller à l'état 26
    Instruction  aller à l'état 27


état 13

    3 Program: tVOID tMAIN tOP tCP Body .

    $défaut  réduction par utilisation de la règle 3 (Program)


état 14

    2 Program: tINT tMAIN $@1 tOP tCP Body .

    $défaut  réduction par utilisation de la règle 2 (Program)


état 15

   32 If: tIF . tOP $@4 Expression tCP $@5 Body

    tOP  décalage et aller à l'état 28


état 16

   61 Instruction: tDO . $@21 Body tWHILE tOP Expression tCP $@22 tVIRG Instruction

    $défaut  réduction par utilisation de la règle 59 ($@21)

    $@21  aller à l'état 29


état 17

   37 Instruction: tVAR . tPLUS tPLUS tVIRG $@7 $@8 Instruction
   40            | tVAR . tMOINS tMOINS tVIRG $@9 $@10 Instruction
   56            | tVAR . tEGAL $@19 Expression tVIRG $@20 Instruction

    tMOINS  décalage et aller à l'état 30
    tPLUS   décalage et aller à l'état 31
    tEGAL   décalage et aller à l'état 32


état 18

    4 Type: tINT .

    $défaut  réduction par utilisation de la règle 4 (Type)


état 19

    6 Type: tVOID .

    $défaut  réduction par utilisation de la règle 6 (Type)


état 20

    7 Type: tCHAR .

    $défaut  réduction par utilisation de la règle 7 (Type)


état 21

    5 Type: tFLOAT .

    $défaut  réduction par utilisation de la règle 5 (Type)


état 22

   49 Instruction: tCONST . Type tVAR tEGAL $@15 Expression tVIRG $@16 Instruction

    tINT    décalage et aller à l'état 18
    tVOID   décalage et aller à l'état 19
    tCHAR   décalage et aller à l'état 20
    tFLOAT  décalage et aller à l'état 21

    Type  aller à l'état 33


état 23

   65 Instruction: tRETURN . tVAR tVIRG @24 Instruction
   67            | tRETURN . tINT_VAL tVIRG @25 Instruction

    tVAR      décalage et aller à l'état 34
    tINT_VAL  décalage et aller à l'état 35


état 24

   63 Instruction: tPRINTF . tOP tVAR $@23 tCP tVIRG Instruction

    tOP  décalage et aller à l'état 36


état 25

   43 Instruction: Type . tVAR tEGAL $@11 Expression tVIRG $@12 Instruction
   46            | Type . tCONST tVAR tEGAL $@13 Expression tVIRG $@14 Instruction
   51            | Type . tVAR tVIRG $@17 Instruction
   53            | Type . tVAR tCOMMA $@18 Liste

    tVAR    décalage et aller à l'état 37
    tCONST  décalage et aller à l'état 38


état 26

   57 Instruction: If . Else Instruction
   58            | If . Instruction

    tIF      décalage et aller à l'état 15
    tELSE    décalage et aller à l'état 39
    tDO      décalage et aller à l'état 16
    tVAR     décalage et aller à l'état 17
    tINT     décalage et aller à l'état 18
    tVOID    décalage et aller à l'état 19
    tCHAR    décalage et aller à l'état 20
    tFLOAT   décalage et aller à l'état 21
    tCONST   décalage et aller à l'état 22
    tRETURN  décalage et aller à l'état 23
    tPRINTF  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 68 (Instruction)

    Type         aller à l'état 25
    If           aller à l'état 26
    Else         aller à l'état 40
    Instruction  aller à l'état 41


état 27

    8 Body: tOB Instruction . tCB

    tCB  décalage et aller à l'état 42


état 28

   32 If: tIF tOP . $@4 Expression tCP $@5 Body

    $défaut  réduction par utilisation de la règle 30 ($@4)

    $@4  aller à l'état 43


état 29

   61 Instruction: tDO $@21 . Body tWHILE tOP Expression tCP $@22 tVIRG Instruction

    tOB  décalage et aller à l'état 12

    Body  aller à l'état 44


état 30

   40 Instruction: tVAR tMOINS . tMOINS tVIRG $@9 $@10 Instruction

    tMOINS  décalage et aller à l'état 45


état 31

   37 Instruction: tVAR tPLUS . tPLUS tVIRG $@7 $@8 Instruction

    tPLUS  décalage et aller à l'état 46


état 32

   56 Instruction: tVAR tEGAL . $@19 Expression tVIRG $@20 Instruction

    $défaut  réduction par utilisation de la règle 54 ($@19)

    $@19  aller à l'état 47


état 33

   49 Instruction: tCONST Type . tVAR tEGAL $@15 Expression tVIRG $@16 Instruction

    tVAR  décalage et aller à l'état 48


état 34

   65 Instruction: tRETURN tVAR . tVIRG @24 Instruction

    tVIRG  décalage et aller à l'état 49


état 35

   67 Instruction: tRETURN tINT_VAL . tVIRG @25 Instruction

    tVIRG  décalage et aller à l'état 50


état 36

   63 Instruction: tPRINTF tOP . tVAR $@23 tCP tVIRG Instruction

    tVAR  décalage et aller à l'état 51


état 37

   43 Instruction: Type tVAR . tEGAL $@11 Expression tVIRG $@12 Instruction
   51            | Type tVAR . tVIRG $@17 Instruction
   53            | Type tVAR . tCOMMA $@18 Liste

    tCOMMA  décalage et aller à l'état 52
    tVIRG   décalage et aller à l'état 53
    tEGAL   décalage et aller à l'état 54


état 38

   46 Instruction: Type tCONST . tVAR tEGAL $@13 Expression tVIRG $@14 Instruction

    tVAR  décalage et aller à l'état 55


état 39

   34 Else: tELSE . $@6 Body

    $défaut  réduction par utilisation de la règle 33 ($@6)

    $@6  aller à l'état 56


état 40

   57 Instruction: If Else . Instruction
